비동기식요청 추가

--- a/7_DOM제어/01_자식노드탐색.html
+++ b/7_DOM제어/01_자식노드탐색.html
@@ -31,7 +31,7 @@
 
             // ul태그의 첫 자식 요소와 마지막 자식 요소를 저장해주세요.
             const $first = $fruits.firstElementChild;
-            const $last = $fruits.lasttElementChild;
+            const $last = $fruits.lastElementChild;
 
         
             console.log($first);
